--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "4.0.3",
     "react-spinners": "^0.10.6",
     "react-toastify": "^7.0.4",
+    "react-tooltip": "^5.10.4",
     "redux": "^4.1.0",
     "require-context": "^1.1.0",
     "socket.io-client": "^4.1.1",
